Dark mode has been added, missing fix little errors in accordions

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,6 +1,6 @@
 .navbar {
   display: flex;
-  background-color: #ffffff !important;
+  background-color: #ffffff;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
@@ -42,6 +42,62 @@
   border-color: #267cec;
   color: #ffffff !important;
   font-weight: bold;
+}
+
+.dark {
+  background-color: #0E1110;
+  color: #ffffff;
+}
+
+.dark a {
+  color: #ffffff;
+}
+
+.dark #laboral-timeline, .dark #academic-timeline {
+  color: #ffffff;
+}
+
+.dark .ant-timeline-item-tail {
+  background-color: #fefefe;
+}
+
+.dark .skills .ant-card, .dark .portfolio .ant-card {
+  background-color: #0e1110;
+  color: #ffffff;
+  border: none;
+}
+
+.dark .ant-card-meta-title {
+  color: #ffffff;
+}
+
+.dark .ant-card-meta-description, .dark .contact .ant-card h5, .dark .contact label {
+  color: #b8b8b8e0;
+}
+
+.dark .ant-collapse {
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.dark .portfolio {
+  background-color: #14181a;
+}
+
+.dark .contact .ant-card {
+  background-color: transparent;
+  color: #ffffff;
+  border: .5px solid #ffffff;
+}
+
+.dark.contact input,.dark.contact textarea {
+  background-color: #14181a;
+  color: #ffffff;
+}
+
+.dark .footer .ant-card {
+  background-color: #267cec;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 768px) {
